[package]
name = "olympus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#NOTE: Remember to revert this before releasing your game! Otherwise you will need to include libbevy_dylib alongside your game if you want it to run. If you remove the "dynamic" feature, your game executable can run standalone.
[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
# The package on crates.io is not updated with the github repo
bevy_ecs_tilemap = { version = "0.12", path = "src/dependencies/bevy_ecs_tilemap" }

# Temporary bypasses to not use the VPN
robotics_lib = { version = "0.1.22", path = "src/dependencies/Robotic-Lib" }
midgard = { version = "0.1.2", path = "src/dependencies/midgard" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
