[package]
name = "olympus"
version = "1.2.0"
edition = "2021"
authors = ["Enrico Dalla Croce (Kalsifer-742)"]
description = "GUI for the robotics_lib"
readme = "README.md"
repository = "https://github.com/Kalsifer-742/olympus.git"
publish = ["kellnr"]

[dependencies]
robotics_lib = { version = "0.1.21", registry = "kellnr" }
macroquad = "0.4.4"
sys-info = "0.9.1"

[dev-dependencies]
rip_worldgenerator = { version = "0.5.54", registry = "kellnr" }
midgard = { version = "0.1.3", registry = "kellnr" }

[[example]]
name = "example"
